--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-body {
+.body {
   background-color: #e4f1fe;
 }
 
@@ -9,12 +9,12 @@ body {
   margin: 60px auto;
   font-family: "Radio Canada", sans-serif;
   padding: 20px;
-  border: 1px solid #8cc0de;
-  border-radius: 10px;
+  box-shadow: 0 30px 50px rgb(65 50 100 / 8%);
+  border-radius: 16px;
 }
 
 .city {
-  font-size: 20px;
+  font-size: 15px;
   color: #34495e;
   text-align: center;
   padding: 40px 0 20px;
@@ -23,40 +23,39 @@ body {
 .search {
   display: block;
   text-align: center;
-  border-radius: 20px;
-  color: #92b4ec;
   margin: 0 45px 0 45px;
-  padding-top: 25px;
-  padding-bottom: 25px;
+  padding: 20px 0px;
 }
 
 .input-city {
-  border-radius: 20px;
+  background: #e4f1fe;
+  border-radius: 8px;
   width: 400px;
-  padding-top: 5px;
-  padding-bottom: 5px;
+  padding: 15px 20px;
+  color: rgba(39, 33, 66, 0.4);
+  font-size: 16px;
+  height: 50px;
+  line-height: 20px;
+  display: inline-block;
+  border: none;
+  margin: 15px;
 }
-input {
-  border-radius: 20px;
-  padding-left: 10px;
-  width: 75%;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  border-color: #ffd24d;
-  box-shadow: 4px 4px 2px rgb(155, 155, 155);
-}
+
 .input-button {
-  border-radius: 20px;
-  width: 80px;
-  padding: 0;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  background-color: #8cc0de;
+  border-radius: 8px;
   color: white;
+  background-color: #6aa1c2;
+  width: 100px;
+  padding: 12px 0px;
+  font-size: 16px;
+  height: 50px;
+  border: none;
+  font-weight: 700;
+  margin: 5px;
 }
 
 .input-button:hover {
-  background-color: #ded98c;
+  background-color: #faf4b7;
   color: white;
 }
 .location-button:hover {
@@ -65,13 +64,16 @@ input {
 }
 
 .location-button {
-  border-radius: 20px;
+  border-radius: 8px;
   text-align: center;
-  width: 150px;
-  padding: 0;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  background-color: #ded98c;
+  width: 100px;
+  padding: 12px 0px;
+  font-size: 16px;
+  height: 50px;
+  border: none;
+  font-weight: 700;
+  background-color: #faf4b7;
+  color: #34495e;
 }
 
 .currentCity {
