--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,8 @@
 .body {
-  background-color: #e4f1fe;
+  background-position: center center;
+  background-attachment: fixed;
+  background-size: 100%;
+  background: url(file:///C:/Users/valer/Downloads/fantastic-blue-sky.jpg);
 }
 
 .full-page {
